--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "exitscript",
   "version": "1.0.0",
   "description": "A warning popup for users who click external links to non-government sites.",
-  "main": "exit-script.js",
+  "main": "exitscript.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
