--- a/package.json
+++ b/package.json
@@ -1,23 +1,36 @@
 {
   "name": "exitscript",
   "version": "1.0.0",
-  "description": "A warning popup for users who click external links to non-government sites.",
-  "main": "exitscript.js",
+  "description": "A client-side popup warning for users clicking on non-government external links.",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rimraf dist; mkdirp dist; browserify lib/index.js -s exitscript > dist/exitscript.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/usdoj/exitscript.git"
   },
-  "author": "brockfanning@gmail.com",
-  "license": "ISC",
+  "keywords": [
+    "external",
+    "links",
+    "modal",
+    "popup",
+    "government"
+  ],
+  "author": "brockfanning <brockfanning@gmail.com>",
+  "license": "Unlicense",
   "bugs": {
     "url": "https://github.com/usdoj/exitscript/issues"
   },
   "homepage": "https://github.com/usdoj/exitscript#readme",
   "dependencies": {
-    "external-link": "^2.0.0",
-    "simple-modal": "^1.0.1"
+    "external-link": "2.0.0",
+    "simple-modal": "2.0.0"
+  },
+  "devDependencies": {
+    "browserify": "16.0.0",
+    "mkdirp": "0.5.1",
+    "rimraf": "2.6.2"
   }
 }
