Add prepublish script to build

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rimraf dist; mkdirp dist; browserify lib/index.js -s exitscript > dist/exitscript.js"
+    "build": "rimraf dist; mkdirp dist; browserify lib/index.js -s exitscript > dist/exitscript.js",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
