--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "exitscript",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "A client-side popup warning for users clicking on non-government external links.",
   "main": "lib/index.js",
   "scripts": {
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "browserify": "16.0.0",
+    "jade": "1.11.0",
     "mkdirp": "0.5.1",
     "rimraf": "2.6.2"
   }
