Simplify npm scripts

--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "exitscript",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "A client-side popup warning for users clicking on non-government external links.",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "browserify lib/index.js -s exitscript > exitscript.js",
-    "prepublish": "npm run build"
+    "prepublish": "browserify lib/index.js -s exitscript > exitscript.js"
   },
   "repository": {
     "type": "git",
