--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A client-side popup warning for users clicking on non-government external links.",
   "main": "lib/index.js",
   "scripts": {
-    "prepublish": "browserify lib/index.js -s exitscript > exitscript.js"
+    "postinstall": "browserify lib/index.js -s exitscript > exitscript.js"
   },
   "repository": {
     "type": "git",
@@ -24,11 +24,10 @@
   },
   "homepage": "https://github.com/usdoj/exitscript#readme",
   "dependencies": {
+    "browserify": "16.0.0",
     "external-link": "2.0.0",
+    "jade": "1.11.0",
     "simple-modal": "2.0.0"
   },
-  "devDependencies": {
-    "browserify": "16.0.0",
-    "jade": "1.11.0"
-  }
+  "devDependencies": {}
 }
