--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "exitscript",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "A client-side popup warning for users clicking on non-government external links.",
   "main": "lib/index.js",
   "scripts": {
@@ -25,10 +25,10 @@
   "homepage": "https://github.com/usdoj/exitscript#readme",
   "dependencies": {
     "external-link": "2.0.0",
+    "jade": "1.11.0",
     "simple-modal": "2.0.0"
   },
   "devDependencies": {
-    "browserify": "16.0.0",
-    "jade": "1.11.0"
+    "browserify": "16.0.0"
   }
 }
