--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "exitscript",
-  "version": "1.0.10",
+  "version": "1.1.0",
   "description": "A client-side popup warning for users clicking on non-government external links.",
   "main": "lib/index.js",
   "scripts": {
-    "postinstall": "browserify lib/index.js -s exitscript > exitscript.js"
+    "postinstall": "browserify -g uglifyify lib/index.js -s exitscript > exitscript.min.js"
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,7 @@
     "simple-modal": "2.0.0"
   },
   "devDependencies": {
-    "browserify": "16.0.0"
+    "browserify": "16.0.0",
+    "uglifyify": "4.0.5"
   }
 }
