--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "exitscript",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "A client-side popup warning for users clicking on non-government external links.",
   "main": "lib/index.js",
   "scripts": {
@@ -31,5 +31,10 @@
   "devDependencies": {
     "browserify": "16.0.0",
     "uglifyify": "4.0.5"
+  },
+  "browserify": {
+    "transform": [
+      "uglifyify"
+    ]
   }
 }
