--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "exitscript",
-  "version": "1.1.7",
+  "version": "1.2.0",
   "description": "A client-side popup warning for users clicking on non-government external links.",
   "main": "lib/index.js",
   "scripts": {
@@ -25,12 +25,12 @@
   },
   "homepage": "https://github.com/usdoj/exitscript#readme",
   "dependencies": {
-    "external-link": "2.0.0",
-    "simple-modal": "2.0.0"
+    "external-link": "2.x",
+    "simple-modal": "2.x"
   },
   "devDependencies": {
-    "browserify": "16.0.0",
-    "jade": "1.11.0",
-    "uglifyify": "4.0.5"
+    "browserify": "16.x",
+    "jade": "1.x",
+    "uglifyify": "4.x"
   }
 }
